--- a/src/main/webapp/static/styles/main.css
+++ b/src/main/webapp/static/styles/main.css
@@ -1,10 +1,10 @@
 html, body {
 	height: 100%;
 	background-color: #F2F8F9;
+	font-family: "Roboto", sans-serif!important;
 }
 
 .container {
-	font-family: "Roboto", sans-serif;
 	background-color: #F2F8F9;
 }
 
@@ -99,13 +99,14 @@ a, a:hover, a:focus, a:active {
 }
 
 .content form {
-	background-color: #FFF;
+	background-color: inherit;
 }
 
-.data-input {
+.data-input, #conference {
 	display: block;
 	padding: 5px;
 	margin: 20px ;
+	font-family: "Roboto", sans-serif!important;
 }
 
 .btn {
@@ -117,11 +118,11 @@ a, a:hover, a:focus, a:active {
 	border: none;
 }
 
-.apply,.accept {
+.apply,.accept,.create {
 	background-color: #62BF6B;
 }
 
-.apply:hover,.accept:hover {
+.apply:hover,.accept:hover,.create:hover {
 	background-color: #5DAC65;
 	cursor: pointer;
 }
@@ -153,6 +154,10 @@ a, a:hover, a:focus, a:active {
 	right: 20px;
 }
 
+.create {
+	margin-left: 20px;
+}
+
 .dropbtn {
   display: inline-block;
   color: white;
@@ -166,7 +171,7 @@ a, a:hover, a:focus, a:active {
   position: absolute;
   background-color: #C4C4C4;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
   z-index: 1;
 }
 
@@ -189,21 +194,23 @@ a, a:hover, a:focus, a:active {
 	padding: 0 20px;
 }
 
-.request,.conference {
+.request,.conference,.section {
 	margin: 15px auto;
 	position: relative;
 	background: #DCDCDC;
 }
 
 .request p:first-child,
-.conference p:first-child {
+.conference p:first-child,
+.section p:first-child{
 	padding-bottom: 5px;
 	padding-top: 20px;
 	padding-left: 25px;
 }
 
 .request p+p,
-.conference p+p {
+.conference p+p,
+.section p+p{
 	padding-top: 5px;
 	padding-bottom: 20px;
 	padding-left: 25px;
