--- a/src/main/webapp/static/styles/login.css
+++ b/src/main/webapp/static/styles/login.css
@@ -1,5 +1,10 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:300);
 
+.language {
+  position: absolute;
+  right: 20px;
+}
+
 .login-page {
   width: 360px;
   padding: 8% 0 0;
